Fix livestream preview on channel page on mobile

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -65,6 +65,32 @@ $actions-z-index: 2;
         }
       }
     }
+    @media (max-width: $breakpoint-small) {
+      &.claim-preview__wrapper {
+        .claim-preview__text {
+          .claim-preview__actions {
+            display: none;
+          }
+          .claim-preview-metadata {
+            .claim-tile__info {
+              display: flex !important;
+              .claim-preview__channel-staked {
+                align-items: start;
+                margin-top: var(--spacing-xxs);
+              }
+              .media__subtitle {
+                span {
+                  width: 100%;
+                  white-space: nowrap;
+                  overflow: hidden;
+                  text-overflow: ellipsis;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
 
   fieldset-group {
